# one_header_logger

./: .clang-format  .gitignore  CMakeLists.txt  README.md  logger.hpp  main.cpp
example/: CMakeLists.txt  main.cpp
logger/: CMakeLists.txt
